--- a/.env
+++ b/.env
@@ -18,10 +18,11 @@ REDIS_LOCATION=redis://redis:6379/1
 REDIS_PORT=6379
 REDIS_DB=0
 
-EMAIL_HOST=smtp.example.com
+EMAIL_BACKEND = "django.core.mail.backends.smtp.EmailBackend"
+EMAIL_HOST="smtp-mail.outlook.com"
 EMAIL_PORT=587
-EMAIL_HOST_USER=your_email_user
-EMAIL_HOST_PASSWORD=your_email_user_password
+EMAIL_HOST_USER='erich.getinger@outlook.de'
+EMAIL_HOST_PASSWORD='pfkmieuvdrhpdfgp'
 EMAIL_USE_TLS=True
 EMAIL_USE_SSL=False
-DEFAULT_FROM_EMAIL=default_from_email
+DEFAULT_FROM_EMAIL=EMAIL_HOST_USER
