--- a/.env
+++ b/.env
@@ -19,10 +19,10 @@ REDIS_PORT=6379
 REDIS_DB=0
 
 EMAIL_BACKEND = "django.core.mail.backends.smtp.EmailBackend"
-EMAIL_HOST="smtp-mail.outlook.com"
+EMAIL_HOST="smtp.gmail.com"
 EMAIL_PORT=587
-EMAIL_HOST_USER='erich.getinger@outlook.de'
-EMAIL_HOST_PASSWORD='pfkmieuvdrhpdfgp'
+EMAIL_HOST_USER='erichgetinger31@gmail.com'
+EMAIL_HOST_PASSWORD='dexl wrtq wgbd fiwx'
 EMAIL_USE_TLS=True
 EMAIL_USE_SSL=False
 DEFAULT_FROM_EMAIL=EMAIL_HOST_USER
